--- a/week3/basic.css
+++ b/week3/basic.css
@@ -96,3 +96,11 @@ a {
     height: 105vh;
     background-color: #FFF;
 }
+
+#timer {
+    float: right;
+    padding: 5px 5px 5px 5px;
+    border-width: 3px; 
+    border-style: solid;
+    border-color: rgb(200, 50, 50); 
+}
