--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h1 {
     font-size: 18px;
     font-weight: 500;
     line-height: 32px;
-    margin-top: 4px;
+    margin: 4px;
 }
 h2 {
     font-size: 18px;
