--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,10 @@ p {
 h1 {
     color: #017B76;
     font-family: "Courier", Courier, sans-serif;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: 500;
-    line-height: 32px;
-    margin: 4px;
+    line-height: 40px;
+    margin: 0px;
 }
 h2 {
     font-size: 18px;
@@ -43,8 +43,16 @@ h4 {
     text-align: center;
     margin: 1.33em 0;
 }
+h5 {
+    color: #666;
+    font-family: "Courier", Courier, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 12px;
+}
 a {
     color: #017B76;
+    font-family: "Courier", Courier, sans-serif;
     text-decoration: underline;
 }
 .fakelink {
@@ -110,6 +118,10 @@ hr {
 #resume td {
     padding: 50px 0px 50px 0px;
 }
+
+/*
+    Projects page
+*/
 .contentlist li {
     color: #666;
     font-size: 16px;
@@ -117,6 +129,51 @@ hr {
     font-weight: normal;
     margin: 20px 20px 0px 20px;
 }
+.contentlist td {
+    color: #666;
+    font-size: 16px;
+    font-family: "Courier", Courier, sans-serif;
+    font-weight: normal;
+    margin: 20px 20px 0px 20px;
+}
+.thumbnails h3 {
+    color: #666;
+    text-align: center;
+    line-height: 20px;
+}
+.thumbnails a {
+    border-bottom: none;
+    display: block;
+    width: 100%;
+    margin: 0 0 2em 0;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: inset 0 0 0 1px rgba(1, 123, 118, .5);
+    background-color: rgba(1, 123, 118, 0.1);
+    cursor: pointer;
+    outline: 0;
+    overflow: hidden;
+    text-decoration: none;
+}
+.column3 {
+  float: left;
+  width: 31%;
+  padding: 5px;
+}
+.column4 {
+  float: left;
+  width: 23%;
+  padding: 5px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/*
+    Contacts page
+*/
 #contact td {
     padding: 50px 50px 50px 50px;
 }
