--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,10 @@ hr {
     overflow: hidden;
     text-decoration: none;
 }
+.thumbnails a:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 #aaa;
+}
 .column3 {
   float: left;
   width: 31%;
