--- a/about/css/style.css
+++ b/about/css/style.css
@@ -1012,3 +1012,11 @@ a {
 @media (max-width: 991.98px) {
   .hero h1 {
     font-size: 40px !important; } }
+
+.blog-year {
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: 'Courier', Courier, sans-serif;
+  padding-left: 30px;
+  color: #aaa;
+}
