--- a/about/css/style.css
+++ b/about/css/style.css
@@ -563,8 +563,10 @@ a {
 }
 
 .podcast-entry {
+	background: 
   -webkit-box-shadow: 0 5px 40px -10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 5px 40px -10px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 20px #c4c4c680, 
+             -10px -10px 20px #ffffff;
   border-radius: 4px;
   overflow: hidden;
 }
